--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="./script.js"></script>
+        <script src="./script.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <div>
+            <h4>Your Score: </h4><p id="playerScore"></p>
+            <h4>Computer Score: </h4><p id="computerScore"></p>
+        </div>
+        <div id="button">
+            <button id="Rock">Rock</button>
+            <button id="Paper">Paper</button>
+            <button id="Scissors">Scissors</button>
+        </div>
+        <h3>Player Selection:</h3><p id="p"></p>
+        <h3>Computer Selection:</h3><p id="c"></p>
+        <h2 id="result"></h2>
+        <h1 id="winner"></h1>
+    </body>
 </html>
